# isotope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: README.md  faq.md
docs/concepts/: architecture.md  developer-architecture.md  reverse-rag.md
docs/guides/: atomization.md  cli.md  configuration.md  deployment.md  troubleshooting.md  tui.md
docs/plans/: 2025-12-25-isotope-design.md  2025-12-25-isotope-future.md  2025-12-26-isotope-phases-1-4.md
docs/tutorials/: getting-started.md  python-intro.txt
examples/: .env.example  README.md
examples/data/: Agents.md  CLAUDE.md  LICENSES.md
src/isotope/: __init__.py  _optional.py  cli.py  config.py  ingestor.py  isotope.py  retriever.py  settings.py
src/isotope/atomizer/: __init__.py  base.py  llm.py  sentence.py
src/isotope/cli/: __init__.py  __main__.py  app.py
src/isotope/commands/: __init__.py  base.py  config_cmd.py  delete.py  ingest.py  init.py  list.py  query.py  status.py
src/isotope/configuration/: __init__.py  base.py
src/isotope/configuration/providers/: __init__.py  litellm.py
src/isotope/configuration/storage/: __init__.py  local.py
src/isotope/embedder/: __init__.py  base.py  client.py
src/isotope/loaders/: __init__.py  base.py  html.py  pdfplumber_loader.py  pypdf_loader.py  registry.py  text.py
src/isotope/models/: __init__.py  atom.py  chunk.py  question.py  results.py
src/isotope/providers/: __init__.py  base.py
src/isotope/providers/litellm/: __init__.py  client.py  models.py
src/isotope/question_generator/: __init__.py  base.py  client.py  diversity_filter.py  exceptions.py
src/isotope/stores/: __init__.py  base.py  chroma.py  source_registry.py  sqlite_atom.py  sqlite_chunk.py
src/isotope/tui/: __init__.py  app.py  styles.tcss  theme.py
src/isotope/tui/commands/: __init__.py  parser.py
src/isotope/tui/screens/: __init__.py  init.py  main.py  welcome.py
src/isotope/tui/widgets/: __init__.py  ascii_logo.py  input_area.py  output.py  status_bar.py  sticky_header.py  tips.py
src/isotopedb/: __init__.py  _optional.py  cli.py  config.py  ingestor.py  isotope.py  llm_models.py  retriever.py
src/isotopedb/atomizer/: __init__.py  base.py  llm.py  sentence.py
src/isotopedb/configuration/: __init__.py  base.py
src/isotopedb/configuration/providers/: __init__.py  litellm.py
src/isotopedb/configuration/storage/: __init__.py  local.py
src/isotopedb/dedup/: __init__.py  base.py  strategies.py
src/isotopedb/embedder/: __init__.py  base.py  client.py  litellm_embedder.py
src/isotopedb/generator/: __init__.py  base.py  client.py  diversity_filter.py  question_generator.py
src/isotopedb/litellm/: __init__.py  atomizer.py  embedder.py  generator.py  models.py
src/isotopedb/loaders/: __init__.py  base.py  html.py  pdfplumber_loader.py  pypdf_loader.py  registry.py  text.py
src/isotopedb/models/: __init__.py  atom.py  chunk.py  question.py  results.py
src/isotopedb/providers/: __init__.py  base.py
src/isotopedb/providers/litellm/: __init__.py  client.py  models.py
src/isotopedb/question_generator/: __init__.py  base.py  client.py  diversity_filter.py  exceptions.py
src/isotopedb/stores/: __init__.py  base.py  chroma.py  source_registry.py  sqlite.py  sqlite_atom.py  sqlite_chunk.py
tests/: __init__.py  conftest.py  test_abcs.py  test_cli.py  test_config.py  test_configuration.py  test_ingestor.py  test_isotope.py  test_retriever.py  test_settings.py
tests/atomizer/: __init__.py  test_llm.py  test_sentence.py
tests/commands/: __init__.py  test_config.py  test_delete.py  test_ingest.py  test_init.py  test_list.py  test_query.py  test_status.py
tests/dedup/: __init__.py  test_strategies.py
tests/embedder/: __init__.py  test_embedder.py
tests/generator/: test_diversity_filter.py  test_question_generator.py
tests/loaders/: test_html.py  test_pdfplumber.py  test_pypdf.py  test_registry.py  test_text.py
tests/models/: test_atom.py  test_chunk.py  test_question.py  test_results.py
tests/question_generator/: __init__.py  test_diversity_filter.py  test_question_generator.py  test_question_generator_async.py
tests/stores/: test_base.py  test_chroma.py  test_sqlite.py  test_sqlite_atom.py  test_sqlite_chunk.py
tests/tui/: __init__.py  test_parser.py  test_widgets.py
