[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isotopedb"
version = "0.1.0"
description = "Reverse RAG database - index questions, not chunks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sree Raman", email = "sreejithraman@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pysbd>=0.3.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Individual components
chromadb = ["chromadb>=0.4"]
litellm = ["litellm>=1.0"]
cli = ["typer>=0.9", "rich>=13.0"]
# Document loaders
pdf = ["pdfplumber>=0.11"]           # Full PDF support (text + tables)
pdf-text = ["pypdf>=4.0"]            # Text extraction only (lightweight)
html = ["beautifulsoup4>=4.12", "markdownify>=0.13"]
# Bundles (flattened to avoid self-referential extras)
default = ["chromadb>=0.4", "litellm>=1.0", "typer>=0.9", "rich>=13.0"]
loaders = ["pdfplumber>=0.11", "beautifulsoup4>=4.12", "markdownify>=0.13"]
all = [
    "chromadb>=0.4", "litellm>=1.0", "typer>=0.9", "rich>=13.0",
    "pdfplumber>=0.11", "beautifulsoup4>=4.12", "markdownify>=0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "litellm>=1.0",
]

[project.scripts]
isotope = "isotopedb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/isotopedb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "mock_integration: tests that mock external LLM APIs (use -m 'not mock_integration' to skip)",
]
